Regression: Reset To Default Value undoing everything when applied twice in the same menu. #93629

Closed
opened 2021-12-04 05:19:40 +01:00 by Sahin Ersoz · 20 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.11

Blender Version
Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: f1cca30557
Worked: 2.93.6
Caused by 1b4d5c7a35

Short description of error
Using "Reset To Default Value" command twice in the menu of a tool ( eg. Loop Cut And Slide) is resetting the entire object, undoing all the changes made, including all changes even before the tool being used.

Exact steps for others to reproduce the error

  • Start Blender, select the default cube.
  • Switch to Edit Mode.
  • Perform some edits on mesh (eg: move a vertex)
  • Select "Loop Cut And Slide"
  • Click on the object and cut a loop
  • In the Loop Cut And Slide menu increase the number of cuts
  • In the same menu right click into the value box and choose "Reset To Default Value"
  • Repeat last step
    This resets all the changes made to the object including all the extrusions made before the "Loop Cut And Slide", reversing the cube's geometry to the state when the scene was first opened.

Video demonstrating the problem:
https://youtu.be/jfD1utkHhG4

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.11 **Blender Version** Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: `f1cca30557` Worked: 2.93.6 Caused by 1b4d5c7a35 **Short description of error** Using "Reset To Default Value" command twice in the menu of a tool ( eg. Loop Cut And Slide) is resetting the entire object, undoing all the changes made, including all changes even before the tool being used. **Exact steps for others to reproduce the error** - Start Blender, select the default cube. - Switch to Edit Mode. - Perform some edits on mesh (eg: move a vertex) - Select "Loop Cut And Slide" - Click on the object and cut a loop - In the Loop Cut And Slide menu increase the number of cuts - In the same menu right click into the value box and choose "Reset To Default Value" - Repeat last step This resets all the changes made to the object including all the extrusions made before the "Loop Cut And Slide", reversing the cube's geometry to the state when the scene was first opened. Video demonstrating the problem: https://youtu.be/jfD1utkHhG4
Author

Added subscriber: @sse

Added subscriber: @sse

#95098 was marked as duplicate of this issue

#95098 was marked as duplicate of this issue

#94897 was marked as duplicate of this issue

#94897 was marked as duplicate of this issue

#94098 was marked as duplicate of this issue

#94098 was marked as duplicate of this issue
Author

Video demonstrating the bug:
https://youtu.be/jfD1utkHhG4

Video demonstrating the bug: https://youtu.be/jfD1utkHhG4
Sahin Ersoz changed title from Reset To Default Value is undoing everything. to Reset To Default Value is undoing everything when applied twice in the same menu. 2021-12-05 02:23:18 +01:00
Contributor

Added subscriber: @dupoxy

Added subscriber: @dupoxy
Contributor

I can confirm the issue.
System Information
Operating system: macOS-10.15.7-x86_64-i386-64bit 64 Bits

I can confirm the issue. **System Information** Operating system: macOS-10.15.7-x86_64-i386-64bit 64 Bits
Contributor

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Contributor
can still confirm on master https://developer.blender.org/rBbe2213472f825fab3cff61029a78954d6f079296
Contributor

Changed status from 'Confirmed' to: 'Needs Triage'

Changed status from 'Confirmed' to: 'Needs Triage'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, thanks for reporting. I can also confirm.

Will bisect.

Hi, thanks for reporting. I can also confirm. Will bisect.
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

Caused by 1b4d5c7a35

cc @ideasman42

Caused by 1b4d5c7a35 cc @ideasman42
Member

Added subscriber: @iouzzr

Added subscriber: @iouzzr
Member

Added subscriber: @Baga-4

Added subscriber: @Baga-4
Member

Added subscriber: @NicholasHarper

Added subscriber: @NicholasHarper
Pratik Borhade self-assigned this 2022-02-19 17:13:16 +01:00
Pratik Borhade changed title from Reset To Default Value is undoing everything when applied twice in the same menu. to Regression: Reset To Default Value undoing everything when applied twice in the same menu. 2022-02-21 13:38:51 +01:00

This issue was referenced by c5b66560de

This issue was referenced by c5b66560de75a54b5c6920fb675c0d804caeb724

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93629
No description provided.