Fix T93629: Reset to defaults undoes all steps when applied twice

Reset Defaults left the undo stack in an invalid state,
with the active undo step left at the previous state then it should
have been.

Now the buttons own undo logic is used to perform undo pushes.